<resources>
    <string name="app_name">CloudApp</string>
    <string name="title_activity_note">CloudActivity</string>
    <string name="name">Name</string>

    <string name="description">Description</string>

    <string name="importance">Importance</string>
    <string name="date">Date</string>
    <string name="textview">TextView</string>
    <string name="image">Image</string>
    <string name="save">Save</string>
    <string name="time">Time</string>

    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="not_set">Not set</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="submit">Submit</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="welcome">Hello, </string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Settings</string>
    <string name="machines_uses">Machines uses</string>
    <string name="your_stock">Your workplace is stock number %1$d</string>
    <string name="products">Products</string>
    <string name="machines">Machines</string>
    <string name="magnetic_cards">Magnetic cards</string>
    <string name="users">Users</string>
    <string name="customers">Customers</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="Delete">Delete</string>
    <string name="profile">Profile</string>
    <string name="logout">Log out</string>
    <string name="login">Log in</string>
    <string name="wrong_input">Wrong input</string>
    <string name="machine_id">Machine Id</string>
    <string name="product_id">Product  Id</string>
    <string name="customer_id">Customer Id</string>
    <string name="magnetic_card_id">Magnetic card Id</string>
    <string name="value_taken">Value taken</string>
    <string name="username">Username</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="role">Role</string>
    <string name="allow">Allow use</string>
    <string name="surname">Surname</string>
    <string name="patronimyc">Patronimyc</string>
    <string name="company">Company name</string>
    <string name="company_address">Company aaddress</string>
    <string name="telephone">Telephone</string>
    <string name="type">Type</string>
    <string name="location">Location</string>
    <string name="plenum">Plenum</string>
    <string name="status">Status</string>
    <string name="product_name">Product name</string>
    <string name="terms">Terms</string>
    <string name="value">Value</string>
    <string name="statistics">Statistics</string>
    <string name="certain_statistics">Certain statistics</string>
    <string name="certain_statistics_for_all">Certain statistics for all machines</string>
    <string name="auth">Authorization</string>
    <string name="generate_stat">View statistics</string>
    <string name="month">Month</string>
    <string name="read">Read</string>
    <string name="focus_camera">Please, focus your camera</string>
    <string name="occupation">Occupation</string>
    <string name="back">Back</string>

    <string name="log_out">Log out</string>
    <string name="registration">Register</string>


</resources>
