<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="50sp"
            android:text="@string/auth"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/wrongInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:gravity="center_horizontal"
            android:text="@string/wrong_input"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="20sp"
            android:textStyle="italic"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/loginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40sp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:text=""
            android:textSize="25sp" />

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40sp"
            android:layout_marginVertical="20sp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:text=""
            android:textSize="25sp" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="120sp"
            android:text="@string/login"
            android:textSize="20sp" />
        <Button
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="120sp"
            android:text="@string/registration"
            android:textSize="20sp" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="140sp"/>


    </LinearLayout>

    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:background="#80000000">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>